hw2/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths: 
        - path: /otusapp/victoria(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: app-service
              port: 
                number: 8000
